# routes/user.js
@@ -4,5 +4,7 @@ const express = require('express')
 const router = express.Router()
 
 router.post('/',validator.userValidationCheck, validator.validateUser, controller.registerUser)
-
+router.get('/', controller.getAllUsers)
+router.put('/:id', validator.userValidationCheck, validator.validateUser, controller.updateUser)
+router.delete('/:id', controller.deleteUser)
 module.exports = router
